--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+    <title>Shivani Sharma,s CSD120 Website</title>
 </head>
 <body>
 
+<header>
+	<nav>
+		<ul>
+			<li>
+			<a href="">Home</a>
+			</li>
+			<li>
+			<a href="">Links</a>
+			</li>
+			<li>
+			<a href="">Glossary</a>
+			</li>
+		</ul>
+	</nav>
+</header>
+
+<main>
+	<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
+		<p>about shivani</p>
+		<p>about shivani</p>
+		<p>about shivani</p>
+	<h2>My Three Favourite Hobies</h2>
+		<ol>
+			<li>
+			<a>Singing</a>
+			</li>
+			<li>
+			<a>Dancing</a>
+			</li>
+			<li>
+			<a>Learning</a>
+			</li>
+		</ol>
+	<h2>Haiku</h2>
+		<p>The chill, worming in</p>
+		<p>Shock, pleasure, bursting within</p>
+		<p>Summer tongue awakes</p>
+		<p>By <b>Suh Joon Kim</b></p>
+		
+</main>
+<footer>
+	<hr>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
+	<blockquote>― Roy T. Bennett, The Light in the Heart</blockquote>
+</footer>
 </body>
 </html>
