a git status git push

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <main>
 	<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
-		<p>about shivani</p>
-		<p>about shivani</p>
-		<p>about shivani</p>
+		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
+		<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
+		<p>If i get chance in life i would like to to performe on any live singing show.</p>
 	<h2>My Three Favourite Hobies</h2>
 		<ol>
 			<li>
