--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
 	<blockquote>― Roy T. Bennett, The Light in the Heart</blockquote>
+	<p>&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
