--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
 <body>
-
+<link rel="stylesheet" href="styles/main.css">
 <header>
 	<nav>
 		<ul>
@@ -38,18 +38,18 @@
 			<a>Learning</a>
 			</li>
 		</ol>
-	<h2>Haiku</h2>
+	<h2><span style="color:red">Haiku</span></h2>
 		<p>The chill, worming in</p>
 		<p>Shock, pleasure, bursting within</p>
 		<p>Summer tongue awakes</p>
-		<p>By <b>Suh Joon Kim</b></p>
+		<p> <span class="byline"> By <b>Suh Joon Kim</b> </span></p>
 		
 </main>
 <footer>
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote>― Roy T. Bennett, The Light in the Heart</blockquote>
-	<p>&copy; <a href="">Shivani sharma</a><p>
+	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
