--- a/links.html
+++ b/links.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<style>
+section a { 
+  color:red;
+}
+</style>
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
 <body>
-
 <header>
 	<nav>
 		<ul>
@@ -22,17 +27,26 @@
 </header>
 
 <main>
+	<section id="useful-links">
 	<h1>Useful Links</h1>
 		<ul>
+			<li>
 			<a href="https://validator.w3.org/nu/">HTML Validator</a>
+			</li>
+			<li>
+			<a href="https://developer.mozilla.org/en-US/">MDN</a>
+			</li>
+			<li>
+			<a href="https://caniuse.com/">Cansius.com</a>
+			</li>
 		</ul>
-		
+	</section>	
 </main>
 <footer>
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote>― Roy T. Bennett, The Light in the Heart</blockquote>
-	<p>&copy; <a href="">Shivani sharma</a><p>
+	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart</span></blockquote>
+	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
