--- a/glossary.html
+++ b/glossary.html
@@ -36,8 +36,8 @@
 <footer>
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
-	<p>&copy; <a href="">Shivani sharma</a><p>
+	<blockquote> <span class="" value="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
