--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
 <body>
+<link rel="stylesheet" href="styles/normalize.css">
 <link rel="stylesheet" href="styles/main.css">
 <header>
 	<nav>
@@ -22,7 +23,13 @@
 </header>
 
 <main>
+	<section class="bio">
 	<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
+	<figure class="mugshot">
+	<a target="_blank" href="images/me.jpg" alt="me">
+		<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
+	</a>
+	</figure>
 		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
 		<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
 		<p>If i get chance in life i would like to to performe on any live singing show.</p>
@@ -43,7 +50,7 @@
 		<p>Shock, pleasure, bursting within</p>
 		<p>Summer tongue awakes</p>
 		<p> <span class="byline"> By <b>Suh Joon Kim</b> </span></p>
-		
+	</section>	
 </main>
 <footer>
 	<hr>
