--- a/links.html
+++ b/links.html
@@ -39,6 +39,15 @@ section a {
 			<li>
 			<a href="https://caniuse.com/">Cansius.com</a>
 			</li>
+			<li>
+			<a href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">normalize</a>
+			</li>
+			<li>
+			<a href="https://fontpair.co">fontPair</a>
+			</li>
+			<li>
+			<a href="https://fonts.google.com/">google fonts</a>
+			</li>
 		</ul>
 	</section>	
 </main>
