--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
@@ -9,13 +9,13 @@
 	<nav>
 		<ul>
 			<li>
-			<a href="">Home</a>
+			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="">Links</a>
+			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="">Glossary</a>
+			<a href="glossary.html">Glossary</a>
 			</li>
 		</ul>
 	</nav>
@@ -39,17 +39,17 @@
 			</li>
 		</ol>
 	<h2>Haiku</h2>
-		<p>The chill, worming in</p>
-		<p>Shock, pleasure, bursting within</p>
-		<p>Summer tongue awakes</p>
-		<p>By <b>Suh Joon Kim</b></p>
+		<p>The chill, worming in<br>
+		Shock, pleasure, bursting within<br>
+		Summer tongue awakes<br>
+		<em>By <b>Suh Joon Kim</b></em></p>
 		
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote>― Roy T. Bennett, The Light in the Heart</blockquote>
-	<p>&copy; <a href="">Shivani sharma</a><p>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
