--- a/links.html
+++ b/links.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
@@ -9,13 +9,13 @@
 	<nav>
 		<ul>
 			<li>
-			<a href="">Home</a>
+			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="">Links</a>
+			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="">Glossary</a>
+			<a href="glossary.html">Glossary</a>
 			</li>
 		</ul>
 	</nav>
@@ -24,15 +24,15 @@
 <main>
 	<h1>Useful Links</h1>
 		<ul>
-			<a href="https://validator.w3.org/nu/">HTML Validator</a>
+			<li><a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</a></li>
 		</ul>
 		
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote>― Roy T. Bennett, The Light in the Heart</blockquote>
-	<p>&copy; <a href="">Shivani sharma</a><p>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<em>― Roy T. Bennett, The Light in the Heart</em></blockquote>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
