--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Shivani Sharma,s CSD120 Website</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<link rel="stylesheet" href="styles/main.css">
 <header>
 	<nav>
 		<ul>
@@ -22,33 +22,39 @@
 </header>
 
 <main>
-	<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
-		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
-		<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
-		<p>If i get chance in life i would like to to performe on any live singing show.</p>
-	<h2>My Three Favourite Hobies</h2>
-		<ol>
-			<li>
-			<a>Singing</a>
-			</li>
-			<li>
-			<a>Dancing</a>
-			</li>
-			<li>
-			<a>Learning</a>
-			</li>
-		</ol>
-	<h2><span style="color:red">Haiku</span></h2>
-		<p>The chill, worming in</p>
-		<p>Shock, pleasure, bursting within</p>
-		<p>Summer tongue awakes</p>
-		<p> <span class="byline"> By <b>Suh Joon Kim</b> </span></p>
+	<section>
+		<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
+			<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
+			<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
+			<p>If i get chance in life i would like to to performe on any live singing show.</p>
+	</section>
+	<section>
+		<h2>My Three Favourite Hobies</h2>
+			<ol>
+				<li>
+				<a>Singing</a>
+				</li>
+				<li>
+				<a>Dancing</a>
+				</li>
+				<li>
+				<a>Learning</a>
+				</li>
+			</ol>
+	</section>
+	<section>
+		<h2>Haiku</h2>
+			<p><span style="background-color:red">The chill, worming in<br>
+			Shock, pleasure, bursting within<br>
+			Summer tongue awakes</span><br>
+			<span class="byline"> By <b>Suh Joon Kim</b> </span></p>
+	</section>
 		
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<span class="byline"><em>― Roy T. Bennett, The Light in the Heart</em></span></blockquote>
 	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
