--- a/glossary.html
+++ b/glossary.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Shivani Sharma,s CSD120 Website</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
@@ -35,8 +36,8 @@
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="" value="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<span class="byline"><em>― Roy T. Bennett, The Light in the Heart</em></span></blockquote>
 	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
