--- a/links.html
+++ b/links.html
@@ -3,11 +3,12 @@
 <head>
 
 <style>
-section a { 
+#useful-links a { 
   color:red;
 }
 </style>
     <title>Shivani Sharma,s CSD120 Website</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 <header>
@@ -31,21 +32,24 @@ section a {
 	<h1>Useful Links</h1>
 		<ul>
 			<li>
-			<a href="https://validator.w3.org/nu/">HTML Validator</a>
+			<a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validator</a>
 			</li>
 			<li>
-			<a href="https://developer.mozilla.org/en-US/">MDN</a>
+			<a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</a>
 			</li>
 			<li>
-			<a href="https://caniuse.com/">Cansius.com</a>
+			<a href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a>
+			</li>
+			<li>
+			<a href="https://caniuse.com/" target="_blank">Cansius.com</a>
 			</li>
 		</ul>
 	</section>	
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart</span></blockquote>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<span class="byline"><em>― Roy T. Bennett, The Light in the Heart</em></span></blockquote>
 	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
