--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
     <title>Shivani Sharma,s CSD120 Website</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/main.css">
+
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+
+
+	<link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
-<link rel="stylesheet" href="styles/normalize.css">
-<link rel="stylesheet" href="styles/main.css">
 <header>
 	<nav>
 		<ul>
@@ -26,8 +32,8 @@
 	<section class="bio">
 	<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
 	<figure class="mugshot">
-	<a target="_blank" href="images/me.jpg" alt="me">
-		<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
+	<a target="_blank" href="images/me.jpg">
+		<img src="images/thumb.jpg" alt="me" width="304" height="228">
 	</a>
 	</figure>
 		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
@@ -55,7 +61,7 @@
 <footer>
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart</span></blockquote>
 	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
