--- a/links.html
+++ b/links.html
@@ -8,6 +8,14 @@ section a {
 }
 </style>
     <title>Shivani Sharma,s CSD120 Website</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/main.css">
+
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+
+
+	<link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <header>
@@ -40,13 +48,16 @@ section a {
 			<a href="https://caniuse.com/">Cansius.com</a>
 			</li>
 			<li>
-			<a href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">normalize</a>
+			<a href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" target="_blank">normalize</a>
 			</li>
 			<li>
-			<a href="https://fontpair.co">fontPair</a>
+			<a href="https://fontpair.co" target="_blank">fontPair</a>
 			</li>
 			<li>
-			<a href="https://fonts.google.com/">google fonts</a>
+			<a href="https://fonts.google.com/" target="_blank">google fonts</a>
+			</li>
+			<li>
+			<a href="https://realfavicongenerator.net/" target="_blank">Favicon Generator</a>
 			</li>
 		</ul>
 	</section>	
