--- a/glossary.html
+++ b/glossary.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <title>Shivani Sharma,s CSD120 Website</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/main.css">
+
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+
+
+	<link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -36,7 +44,7 @@
 <footer>
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart</span></blockquote>
 	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
