--- a/glossary.html
+++ b/glossary.html
@@ -4,40 +4,42 @@
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
 <body>
-
+<link rel="stylesheet" href="styles/normalize.css">
+<link rel="stylesheet" href="styles/main.css">
 <header>
 	<nav>
 		<ul>
 			<li>
-			<a href="">Home</a>
+			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="">Links</a>
+			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="">Glossary</a>
+			<a href="glossary.html">Glossary</a>
 			</li>
 		</ul>
 	</nav>
 </header>
 
 <main>
-	<h1>Acronym Glossary</h1>
-		<h2>HTML Basic</h2>
-		<p>HTML defines the structure and layout of a Web document by using a variety of tags and attributes.</p>
-		<h2>CSS basics</h2>
-		<p>CSS describes how HTML elements are to be displayed on screen, paper, or in other media</p>
-		<h2>internet Basic</h2>
-		<p>The Internet is essentially a global network of computing resources. You can think of the Internet as a physical collection of routers and circuits as a set of shared resources</p>
-		<h2>HTTP</h2>
-		<p>HTTP means HyperText Transfer Protocol. HTTP is the underlying protocol used by the World Wide Web and this protocol defines how messages are formatted and transmitted, and what actions Web servers and browsers should take in response to various commands</p>
-		
+	<dl>
+	<dt>HTML Basic</dt>
+	<dd> HTTML defines the structure and layout of a web document by using a variety of tags and attributes.</dd>
+	<dt> CSS basics</dt>
+	<dd> CSS describes how HTML elements are to be displayed on screen,paper,or in other media.</dd>
+	<dt> Internet Basic</dt>
+	<dd> The internet is essentially a global network of computing resources.You can think of the internet as a physical collection of routers and circuits as a set of shared resources.</dd>
+	<dt> HTTP</dt>
+	<dd> HTTP means HyperText Transfer Protocol.HTTP is the underlying protocol used by the World Wide Web and this protocol defines how messages are formatted transmitted ,and what actions web servers and browsers should take in response to various commands.</dd>
+	</dl>
+	
 </main>
 <footer>
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="" value="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
-	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
+	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<p>&copy; <a href="mail to:shivani@something.com?subject=Message%20from%20CSD120%20website"> Shivani Sharma</a><p>
 </footer>
 </body>
 </html>
