--- a/links.html
+++ b/links.html
@@ -10,6 +10,8 @@ section a {
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
 <body>
+<link rel="stylesheet" href="styles/normalize.css">
+<link rel="stylesheet" href="styles/main.css">
 <header>
 	<nav>
 		<ul>
@@ -31,13 +33,22 @@ section a {
 	<h1>Useful Links</h1>
 		<ul>
 			<li>
-			<a href="https://validator.w3.org/nu/">HTML Validator</a>
+		<li><a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</a></li>
 			</li>
 			<li>
 			<a href="https://developer.mozilla.org/en-US/">MDN</a>
 			</li>
 			<li>
 			<a href="https://caniuse.com/">Cansius.com</a>
+			</li>
+			<li>
+			<a href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">normalize</a>
+			</li>
+			<li>
+			<a href="https://fontpair.co">fontPair</a>
+			</li>
+			<li>
+			<a href="https://fonts.google.com/">google fonts</a>
 			</li>
 		</ul>
 	</section>	
