--- a/glossary.html
+++ b/glossary.html
@@ -36,7 +36,7 @@
 <footer>
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
+	<blockquote> ― Roy T. Bennett, The Light in the Heart</blockquote>
 	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
 </footer>
 </body>
