--- a/links.html
+++ b/links.html
@@ -14,13 +14,13 @@ section a {
 	<nav>
 		<ul>
 			<li>
-			<a href="">Home</a>
+			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="">Links</a>
+			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="">Glossary</a>
+			<a href="glossary.html">Glossary</a>
 			</li>
 		</ul>
 	</nav>
@@ -53,9 +53,9 @@ section a {
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart</span></blockquote>
-	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
