--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<nav>
 		<ul>
 			<li>
-			<a href="">Home</a>
+			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="">Links</a>
+			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="">Glossary</a>
+			<a href="glossary.htmlS">Glossary</a>
 			</li>
 		</ul>
 	</nav>
@@ -46,17 +46,17 @@
 			</li>
 		</ol>
 	<h2><span style="color:red">Haiku</span></h2>
-		<p>The chill, worming in</p>
-		<p>Shock, pleasure, bursting within</p>
-		<p>Summer tongue awakes</p>
-		<p> <span class="byline"> By <b>Suh Joon Kim</b> </span></p>
+		<p>The chill, worming in<br>
+		Shock, pleasure, bursting within<br>
+		Summer tongue awakes<br>
+		<em>By <b>Suh Joon Kim</b></em></p>
 	</section>	
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
-	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
 </footer>
 </body>
 </html>
