lab2 comment #3 fix

--- a/links.html
+++ b/links.html
@@ -3,7 +3,7 @@
 <head>
 
 <style>
-section a { 
+#useful-links a { 
   color:red;
 }
 </style>
@@ -31,22 +31,22 @@ section a {
 	<h1>Useful Links</h1>
 		<ul>
 			<li>
-			<a href="https://validator.w3.org/nu/">HTML Validator</a>
+			<a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</a>
 			</li>
 			<li>
-			<a href="https://developer.mozilla.org/en-US/">MDN</a>
+			<a href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a>
 			</li>
 			<li>
-			<a href="https://caniuse.com/">Cansius.com</a>
+			<a href="https://caniuse.com/" target="_blank">Cansius.com</a>
 			</li>
 			<li>
-			<a href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">normalize</a>
+			<a href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" target="_blank">normalize</a>
 			</li>
 			<li>
-			<a href="https://fontpair.co">fontPair</a>
+			<a href="https://fontpair.co" target="_blank">fontPair</a>
 			</li>
 			<li>
-			<a href="https://fonts.google.com/">google fonts</a>
+			<a href="https://fonts.google.com/" target="_blank">google fonts</a>
 			</li>
 		</ul>
 	</section>	
