lab2 comment #3 fix

--- a/glossary.html
+++ b/glossary.html
@@ -15,7 +15,7 @@
 			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="S">Glossary</a>
+			<a href="glossary.html">Glossary</a>
 			</li>
 		</ul>
 	</nav>
