lab2 comment #3 fix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="glossary.htmlS">Glossary</a>
+			<a href="glossary.html">Glossary</a>
 			</li>
 		</ul>
 	</nav>
