--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>Shivani Sharma,s CSD120 Website</title>
 </head>
 <body>
+<div class="width-wrap">
 <link rel="stylesheet" href="styles/normalize.css">
 <link rel="stylesheet" href="styles/main.css">
+
 <header>
 	<nav>
 		<ul>
@@ -57,6 +59,8 @@
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
 	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
+	</hr>
 </footer>
+</div>
 </body>
 </html>
