--- a/links.html
+++ b/links.html
@@ -48,6 +48,9 @@
 			<li>
 			<a href="https://fonts.google.com/" target="_blank">google fonts</a>
 			</li>
+			<li>
+			<a href="https://cssgradient.io/" target="_blank">Css Gradient</a>
+			</li>
 		</ul>
 	</section>	
 </main>
