--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
 	<section class="bio">
 	<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
 	<figure class="mugshot">
-	<a target="_blank" href="images/me.jpg" alt="me">
-		<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
-	</a>
+		<div class="paperclip">
+		</div>
+		<a target="_blank" href="images/me.jpg" alt="me">
+			<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
+		</a>
+		
+		
 	</figure>
 		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
 		<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
