--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <meta charset="UTF-8">
     <title>Shivani Sharma,s CSD120 Website</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<link rel="stylesheet" href="styles/normalize.css">
-<link rel="stylesheet" href="styles/main.css">
+<div class="width-wrap">
+
+
 <header>
 	<nav>
 		<ul>
 			<li>
-			<a href="">Home</a>
+			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="">Links</a>
+			<a href="links.html">Links</a>
 			</li>
 			<li>
-			<a href="">Glossary</a>
+			<a href="glossary.html">Glossary</a>
 			</li>
 		</ul>
 	</nav>
@@ -26,13 +30,18 @@
 	<section class="bio">
 	<h1>Welcome to Shivani Sharma’s CSD120 Website!</h1>
 	<figure class="mugshot">
-	<a target="_blank" href="images/me.jpg" alt="me">
-		<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
-	</a>
+		<div class="paperclip">
+		</div>
+		<a target="_blank" href="images/me.jpg" alt="me">
+			<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
+		</a>
+		
+		
 	</figure>
 		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
 		<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
 		<p>If i get chance in life i would like to to performe on any live singing show.</p>
+	<section class="myFav">
 	<h2>My Three Favourite Hobies</h2>
 		<ol>
 			<li>
@@ -45,18 +54,21 @@
 			<a>Learning</a>
 			</li>
 		</ol>
+	</section>
 	<h2><span style="color:red">Haiku</span></h2>
 		<p>The chill, worming in<br>
 		Shock, pleasure, bursting within<br>
-		Summer tongue awakes</br>
+		Summer tongue awakes<br>
 		<em>By <b>Suh Joon Kim</b></em></p>
 	</section>	
 </main>
 <footer>
 	<hr>
-	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."</blockquote>
-	<blockquote> <span class="byline">― Roy T. Bennett, The Light in the Heart<span></blockquote>
-	<p id="page-copyright">&copy; <a href="">Shivani sharma</a><p>
+	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
+	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
+	</hr>
 </footer>
+</div>
 </body>
 </html>
