--- a/glossary.html
+++ b/glossary.html
@@ -40,7 +40,7 @@
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
-	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a></p>
 </footer>
 </div>
 </body>
