--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Shivani Sharma,s CSD120 Website</title>
@@ -31,7 +31,7 @@
 	<figure class="mugshot">
 		<div class="paperclip">
 		</div>
-		<a target="_blank" href="images/me.jpg" alt="me">
+		<a target="_blank" href="images/me.jpg">
 			<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
 		</a>
 		
@@ -65,8 +65,7 @@
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
-	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
-	</hr>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a></p>
 </footer>
 </div>
 </body>
