--- a/links.html
+++ b/links.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
 <style>
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+<div class="width-wrap">
 <header>
 	<nav>
 		<ul>
@@ -60,7 +61,8 @@
 	<hr>
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
-	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
+	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a></p>
 </footer>
+</div>
 </body>
 </html>
