--- a/glossary.html
+++ b/glossary.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="width-wrap">
-<header>
+<header id="top">
 	<nav>
 		<ul>
 			<li>
@@ -42,6 +42,9 @@
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
 	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
 </footer>
+<div class="back-to-top">
+<a href="#top">◤</a>
+</div>
 </div>
 </body>
 </html>
