--- a/links.html
+++ b/links.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<header>
+<div class="width-wrap">
+<header id="top">
 	<nav>
 		<ul>
 			<li>
@@ -62,5 +63,9 @@
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
 	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
 </footer>
+<div class="back-to-top">
+<a href="#top">◤</a>
+</div>
+</div>
 </body>
 </html>
