--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="width-wrap">
 
-<header>
+<header id="top">
 	<nav>
 		<ul>
 			<li>
@@ -68,6 +68,9 @@
 	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
 	</hr>
 </footer>
+<div class="back-to-top">
+<a href="#top">◤</a>
+</div>
 </div>
 </body>
 </html>
