--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Shivani Sharma,s CSD120 Website</title>
@@ -31,7 +31,7 @@
 	<figure class="mugshot">
 		<div class="paperclip">
 		</div>
-		<a target="_blank" href="images/me.jpg" alt="me">
+		<a target="_blank" href="images/me.jpg">
 			<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
 		</a>
 		
@@ -40,6 +40,7 @@
 		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
 		<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
 		<p>If i get chance in life i would like to to performe on any live singing show.</p>
+	</section>
 	<section class="myFav">
 	<h2>My Three Favourite Hobies</h2>
 		<ol>
@@ -54,6 +55,7 @@
 			</li>
 		</ol>
 	</section>
+	<section>
 	<h2><span style="color:red">Haiku</span></h2>
 		<p>The chill, worming in<br>
 		Shock, pleasure, bursting within<br>
@@ -66,7 +68,6 @@
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
 	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
-	</hr>
 </footer>
 <div class="back-to-top">
 <a href="#top">◤</a>
