--- a/glossary.html
+++ b/glossary.html
@@ -25,6 +25,7 @@
 </header>
 
 <main>
+	<section class="glossary">
 	<dl>
 		<dt>HTML Basic</dt>
 		<dd>HTML defines the structure and layout of a Web document by using a variety of tags and attributes.</dd>
@@ -35,6 +36,7 @@
 		<dt>HTTP</dt>
 		<dd>HTTP means HyperText Transfer Protocol. HTTP is the underlying protocol used by the World Wide Web and this protocol defines how messages are formatted and transmitted, and what actions Web servers and browsers should take in response to various commands</dd>
 	</dl>
+	</section>
 </main>
 <footer>
 	<hr>
