--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="paperclip">
 		</div>
 		<a target="_blank" href="images/me.jpg" alt="me">
-			<img src="images/thumb.jpg" alt="thumb" width="304" height="228">
+			<img src="images/thumb.jpg" alt="thumb" width="100" height="100">
 		</a>
 		
 		
@@ -40,6 +40,7 @@
 		<p>I completed diploma Computer Science from Chandigarh University with a wide range of programming subjects in application and Web programming.Now, I am a student in the Computer Programming at Sault College.</p>
 		<p>When i am free from classes i usually talk to my family and restly  spend my time in music </p>
 		<p>If i get chance in life i would like to to performe on any live singing show.</p>
+	</section>
 	<section class="myFav">
 	<h2>My Three Favourite Hobies</h2>
 		<ol>
@@ -54,12 +55,63 @@
 			</li>
 		</ol>
 	</section>
+	<section>
 	<h2><span style="color:red">Haiku</span></h2>
 		<p>The chill, worming in<br>
 		Shock, pleasure, bursting within<br>
 		Summer tongue awakes<br>
 		<em>By <b>Suh Joon Kim</b></em></p>
 	</section>	
+	<section class="galary">
+		  <h2>Photo Gallery</h2>
+		  <div class="galary-thumbnails">
+			<a class="row-span-2" href="https://picsum.photos/id/10/1024">
+				<img src="https://picsum.photos/id/10/300/600" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/11/1024">
+				<img src="https://picsum.photos/id/11/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/12/1024">
+				<img src="https://picsum.photos/id/12/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/13/1024">
+				<img src="https://picsum.photos/id/13/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/14/1024">
+				<img src="https://picsum.photos/id/14/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/15/1024">
+				<img src="https://picsum.photos/id/15/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/16/1024">
+				<img src="https://picsum.photos/id/16/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/17/1024">
+				<img src="https://picsum.photos/id/17/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/18/1024">
+				<img src="https://picsum.photos/id/18/300" alt="Placeholder Image">
+			</a>
+			<a class="row-span-2 col-span-2" href="https://picsum.photos/id/19/1024">
+				<img src="https://picsum.photos/id/19/600" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/20/1024">
+				<img src="https://picsum.photos/id/20/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/21/1024">
+				<img src="https://picsum.photos/id/21/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/22/1024">
+				<img src="https://picsum.photos/id/22/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/23/1024">
+				<img src="https://picsum.photos/id/23/300" alt="Placeholder Image">
+			</a>
+			<a href="https://picsum.photos/id/24/1024">
+				<img src="https://picsum.photos/id/24/300" alt="Placeholder Image">
+			</a>
+		  </div>
+	</section>
 </main>
 <footer>
 	<hr>
