--- a/links.html
+++ b/links.html
@@ -10,11 +10,14 @@
     <title>Shivani Sharma,s CSD120 Website</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/mobbile.css">
 </head>
 <body>
 <div class="width-wrap">
 <header id="top">
 	<nav>
+	<div class="burger">
+	</div>
 		<ul>
 			<li>
 			<a href="index.html">Home</a>
