--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Shivani Sharma,s CSD120 Website</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/mobbile.css">
 </head>
 <body>
 <div class="width-wrap">
 
 <header id="top">
 	<nav>
+	<div class="burger">
+	</div>
 		<ul>
 			<li>
 			<a href="index.html">Home</a>
@@ -118,6 +121,7 @@
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
 	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
+	<p><img src="images/sc-logo.png" sizes="70px" srcset="images/sc-logo@1.5x.png 768w, images/sc-logo@2x.png 668w, images/sc-logo@3x.png 468w, images/sc-logo@4x.png 268w" alt="logo"></p>
 	</hr>
 </footer>
 <div class="back-to-top">
