--- a/glossary.html
+++ b/glossary.html
@@ -26,6 +26,7 @@
 
 <main>
 	<section class="glossary">
+		<h2>Glossary</h2>
 	<dl>
 		<dt>HTML Basic</dt>
 		<dd>HTML defines the structure and layout of a Web document by using a variety of tags and attributes.</dd>
