--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Shivani Sharma,s CSD120 Website</title>
@@ -31,7 +31,7 @@
 	<figure class="mugshot">
 		<div class="paperclip">
 		</div>
-		<a target="_blank" href="images/me.jpg" alt="me">
+		<a target="_blank" href="images/me.jpg">
 			<img src="images/thumb.jpg" alt="thumb" width="100" height="100">
 		</a>
 		
@@ -62,9 +62,9 @@
 		Summer tongue awakes<br>
 		<em>By <b>Suh Joon Kim</b></em></p>
 	</section>	
-	<section class="galary">
+	<section class="gallery">
 		  <h2>Photo Gallery</h2>
-		  <div class="galary-thumbnails">
+		  <div class="gallery-thumbnails">
 			<a class="row-span-2" href="https://picsum.photos/id/10/1024">
 				<img src="https://picsum.photos/id/10/300/600" alt="Placeholder Image">
 			</a>
@@ -118,7 +118,6 @@
 	<blockquote>"If you want to be happy, do not dwell in the past, do not worry about the future, focus on living fully in the present."<br>
 	<em>&mdash; Roy T. Bennett, The Light in the Heart</em></blockquote>
 	<p>&copy; <a href="mailto:shivani@something.com?subject=Message%20from%20CSD120%20website">Shivani sharma</a><p>
-	</hr>
 </footer>
 <div class="back-to-top">
 <a href="#top">◤</a>
