--- a/index.html
+++ b/index.html
@@ -65,6 +65,29 @@
 		Summer tongue awakes<br>
 		<em>By <b>Suh Joon Kim</b></em></p>
 	</section>	
+	<section>
+		<h2>My Sault College Courses</h2>
+			<table border="1px solid black">
+				<tr>
+					<th>Term</th>
+					<th>Code</th>
+					<th>Course Name</th>
+				</tr>
+				<tr>
+					<td rowspan="2">Fall<td>
+					<td>CSD105<td>
+					<td>Python<td>
+				</tr>
+				<tr>
+					<td>CSD120<td>
+					<td>Web Development<td>
+				</tr>
+				<tr>
+					<td>MTH122<td>
+					<td>Mathematics<td>
+				</tr>
+			</table>
+	</section>
 	<section class="galary">
 		  <h2>Photo Gallery</h2>
 		  <div class="galary-thumbnails">
@@ -114,6 +137,45 @@
 				<img src="https://picsum.photos/id/24/300" alt="Placeholder Image">
 			</a>
 		  </div>
+	</section>
+	<section class="survey">
+		<h2>Survey</h2>
+		<form>
+			<label> What is your name?<br>
+				<input type="text" name="name" required>
+			</label></br>
+			<label> What is your email?<br>
+				<input type="email" name="email" required>
+			</label></br>
+			<label> Which integer is best?<br>
+				<input type="number" name="number" >
+			</label></br>
+			<label> Which day is best?<br>
+				<input type="date" name="date" >
+			</label></br>
+			<label>Which bear is best?<br>
+				<select>
+					<option value=""></option>
+					<option value="Black">Black</option>
+					<option value="Brown">Brown</option>
+					<option value="Care">Care</option>
+					<option value="Panda">Panda</option>
+					<option value="Polar">Polar</option>
+					<option value="Teddy">Teddy</option>
+				</select>
+			</label></br>
+			<label for="radio">Do you like radio button?<br>
+				<label for="yes">yes</label>
+				<input type="radio" name="" value="yes"><br>
+				<label for="no">no</label>
+				<input type="radio" name=""  value="no"><br>
+			</label></br>
+				
+			<label>What is the meaning of life?</br>
+				<textarea name="" rows="10" cols="100" placeholder="Enter the correct answer here"></textarea>
+			</label>
+			<input type="submit" value="send">
+		</form>
 	</section>
 </main>
 <footer>
